--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
     "quill-image-resize": "^3.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,14 +21,16 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "export PORT=8888 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serverbuild": "npx tsc",
+    "serverstart": "node ./dist/server/index.js",
+    "dev": "concurrently \"npm run serverstart\" \"npm start\" \"npx tsc --watch\"" 
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,10 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.13",
+    "@types/styled-components": "^5.1.25",
+    "concurrently": "^7.6.0",
+    "typescript": "^4.9.4"
   }
 }
